<package format="3">
  <name>tmc_diag_updater_common</name>
  <version>2.0.0</version>
  <description>Common modules to update daignostics</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <author>Fukukazu Kawata</author>
  <author>Hiroaki Yaguchi</author>
  <author>Keisuke Takeshita</author>

  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>boost</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>