<package format="3">
  <name>tmc_imu_diag_updater</name>
  <version>2.0.0</version>
  <description>The tmc_imu_diag_updater package</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <author>Fukukazu Kawata</author>
  <author>Hiroaki Yaguchi</author>

  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tmc_diag_updater_common</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>